--- a/expenses/fixtures/AverageTest.yaml
+++ b/expenses/fixtures/AverageTest.yaml
@@ -36,9 +36,9 @@
     pk: 1
     fields:
         user: 1
-        category: 1
+        category: 2
         date: !!timestamp 2010-01-01 00:00:00 -3
-        value: -50
+        value: -100
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
@@ -47,7 +47,7 @@
         user: 1
         category: 1
         date: !!timestamp 2010-01-02 00:00:00 -3
-        value: 110
+        value: -110
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
@@ -56,16 +56,16 @@
         user: 1
         category: 1
         date: !!timestamp 2010-01-03 00:00:00 -3
-        value: 100
+        value: -80
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
     pk: 4
     fields:
         user: 1
-        category: 1
+        category: 2
         date: !!timestamp 2010-01-04 00:00:00 -3
-        value: 100
+        value: 600
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
@@ -74,7 +74,7 @@
         user: 1
         category: 1
         date: !!timestamp 2010-01-11 00:00:00 -3
-        value: 100
+        value: -100
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
@@ -83,7 +83,7 @@
         user: 1
         category: 1
         date: !!timestamp 2010-01-15 00:00:00 -3
-        value: 100
+        value: -100
         last_edited_time: "00:00:00"
 
 # February
@@ -93,7 +93,7 @@
         user: 1
         category: 1
         date: !!timestamp 2010-02-01 00:00:00 -3
-        value: 100
+        value: -50
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
@@ -109,9 +109,9 @@
     pk: 9
     fields:
         user: 1
-        category: 1
+        category: 2
         date: !!timestamp 2010-02-03 00:00:00 -3
-        value: 100
+        value: -300
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
@@ -120,16 +120,16 @@
         user: 1
         category: 1
         date: !!timestamp 2010-02-11 00:00:00 -3
-        value: 100
+        value: -130
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
     pk: 11
     fields:
         user: 1
-        category: 1
+        category: 2
         date: !!timestamp 2010-02-15 00:00:00 -3
-        value: 100
+        value: 1000
         last_edited_time: "00:00:00"
 
 # March
@@ -139,16 +139,16 @@
         user: 1
         category: 1
         date: !!timestamp 2010-03-01 00:00:00 -3
-        value: 110
+        value: +110
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
     pk: 13
     fields:
         user: 1
-        category: 1
+        category: 2
         date: !!timestamp 2010-03-02 00:00:00 -3
-        value: 100
+        value: -320
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
@@ -157,14 +157,14 @@
         user: 1
         category: 1
         date: !!timestamp 2010-03-11 00:00:00 -3
-        value: 100
+        value: -100
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
     pk: 15
     fields:
         user: 1
-        category: 1
+        category: 2
         date: !!timestamp 2010-03-15 00:00:00 -3
         value: 100
         last_edited_time: "00:00:00"
