--- a/expenses/fixtures/ListEntryTest.yaml
+++ b/expenses/fixtures/ListEntryTest.yaml
@@ -7,14 +7,14 @@
     fields:
         email: user1@expenses.com
         password: pbkdf2_sha256$10000$exbEFO2A8SBp$qwvZv5jc5a4nvzM5KlKwf2q/ii5PYCgUStrExqYz6eQ=
-        date_joined: !!timestamp 2010-02-02 00:00:00 -3
+        date_joined: "2010-02-02 00:00:00-03:00"
 
 -   model: access.user
     pk: 2
     fields:
         email: user2@expenses.com
         password: pbkdf2_sha256$10000$exbEFO2A8SBp$qwvZv5jc5a4nvzM5KlKwf2q/ii5PYCgUStrExqYz6eQ=
-        date_joined: !!timestamp 2010-02-02 00:00:00 -3
+        date_joined: "2010-02-02 00:00:00-03:00"
 
 
 ############
@@ -45,7 +45,7 @@
         user: 1
         category: 1
         value: 10
-        date: !!timestamp 2010-03-03
+        date: 2010-03-03
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
@@ -54,7 +54,7 @@
         user: 1
         category: 1
         value: 10
-        date: !!timestamp 2010-03-03
+        date: 2010-03-03
         last_edited_time: "00:00:00"
 
 # three entries for user 2
@@ -64,7 +64,7 @@
         user: 2
         category: 2
         value: 20
-        date: !!timestamp 2010-03-03
+        date: 2010-03-03
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
@@ -73,7 +73,7 @@
         user: 2
         category: 2
         value: 20
-        date: !!timestamp 2010-03-03
+        date: 2010-03-03
         last_edited_time: "00:00:00"
 
 -   model: expenses.entry
@@ -82,5 +82,5 @@
         user: 2
         category: 2
         value: 20
-        date: !!timestamp 2010-03-03
+        date: 2010-03-03
         last_edited_time: "00:00:00"
