removing auto lower casing of category names

--- a/api/fixtures/TransactionResourceTest.yaml
+++ b/api/fixtures/TransactionResourceTest.yaml
@@ -7,7 +7,7 @@
 -   model: expenses.Category
     pk: 2
     fields:
-        name: stuff
+        name: STUFF
         user: 1
 
 -   model: expenses.Category
