--- a/reminder/fixtures/RepeatableTransactionQuerysetTest.yaml
+++ b/reminder/fixtures/RepeatableTransactionQuerysetTest.yaml
@@ -6,7 +6,7 @@
     pk: 1
     fields:
         email: user1@expenses.com
-        password: pbkdf2_sha256$10000$exbEFO2A8SBp$qwvZv5jc5a4nvzM5KlKwf2q/ii5PYCgUStrExqYz6eQ=
+        password: pbkdf2_sha256$10000$wo6HIENoIXsB$wpLNSzhkUKbEjAK2oTg6QlC8SJDY8dUYkexCYfH+CO8= #asd
         date_joined: "2010-02-02 00:00:00-03:00"
 
 
@@ -33,6 +33,7 @@
         value: -50
         _last_date: 2010-10-09
         _day_of_month: 30
+        repeat: 'weekly'
 
 -   model: reminder.repeatabletransaction
     pk: 2
@@ -42,6 +43,7 @@
         value: -50
         _last_date: 2010-10-10
         _day_of_month: 30
+        repeat: 'weekly'
 
 -   model: reminder.repeatabletransaction
     pk: 3
@@ -51,3 +53,4 @@
         value: -50
         _last_date: 2010-10-11
         _day_of_month: 30
+        repeat: 'weekly'
