--- a/api/fixtures/ReminderResourceTest.yaml
+++ b/api/fixtures/ReminderResourceTest.yaml
@@ -25,6 +25,7 @@
         _last_date: '2010-01-03'
         _day_of_month: 03
         repeat: 'daily'
+        description: some stuff
 
 -   model: reminder.RepeatableTransaction
     pk: 2
