--- a/api/fixtures/ReminderCreateTransactionResourceTest.yaml
+++ b/api/fixtures/ReminderCreateTransactionResourceTest.yaml
@@ -16,7 +16,7 @@
         value: 50
         category: 1
         user: 1
-        _last_date: '2010-01-03'
+        _due_date: '2010-01-03'
         _day_of_month: 03
         repeat: 'daily'
         description: 'some stuff'
@@ -27,6 +27,6 @@
         value: 0
         category: 2
         user: 2
-        _last_date: '2010-01-03'
+        _due_date: '2010-01-03'
         _day_of_month: 03
         repeat: 'daily'
