--- a/expenses/fixtures/AverageTest.yaml
+++ b/expenses/fixtures/AverageTest.yaml
@@ -27,12 +27,12 @@
         name: Income
 
 
-#########
-# ENTRY #
-#########
+###############
+# Transaction #
+###############
 
 # January
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 1
     fields:
         user: 1
@@ -41,7 +41,7 @@
         value: -100
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 2
     fields:
         user: 1
@@ -50,7 +50,7 @@
         value: -110
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 3
     fields:
         user: 1
@@ -59,7 +59,7 @@
         value: -80
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 4
     fields:
         user: 1
@@ -68,7 +68,7 @@
         value: 600
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 5
     fields:
         user: 1
@@ -77,7 +77,7 @@
         value: -100
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 6
     fields:
         user: 1
@@ -87,7 +87,7 @@
         last_edited_time: "00:00:00"
 
 # February
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 7
     fields:
         user: 1
@@ -96,7 +96,7 @@
         value: -50
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 8
     fields:
         user: 1
@@ -105,7 +105,7 @@
         value: 100
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 9
     fields:
         user: 1
@@ -114,7 +114,7 @@
         value: -300
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 10
     fields:
         user: 1
@@ -123,7 +123,7 @@
         value: -130
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 11
     fields:
         user: 1
@@ -133,7 +133,7 @@
         last_edited_time: "00:00:00"
 
 # March
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 12
     fields:
         user: 1
@@ -142,7 +142,7 @@
         value: +110
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 13
     fields:
         user: 1
@@ -151,7 +151,7 @@
         value: -320
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 14
     fields:
         user: 1
@@ -160,7 +160,7 @@
         value: -100
         last_edited_time: "00:00:00"
 
--   model: expenses.entry
+-   model: expenses.Transaction
     pk: 15
     fields:
         user: 1
