reactivating category when its used again

--- a/api/fixtures/CategoryResourceTest.yaml
+++ b/api/fixtures/CategoryResourceTest.yaml
@@ -13,6 +13,13 @@
 
 -   model: expenses.Category
     fields:
+        name: Inactive
+        user: 1
+        active: false
+    pk: 4
+
+-   model: expenses.Category
+    fields:
         name: Lunch
         user: 2
     pk: 3
