--- a/api/fixtures/TransactionResourceTest.yaml
+++ b/api/fixtures/TransactionResourceTest.yaml
@@ -11,6 +11,13 @@
         user: 1
 
 -   model: expenses.Category
+    pk: 4
+    fields:
+        name: Inactive
+        user: 1
+        active: false
+
+-   model: expenses.Category
     pk: 3
     fields:
         name: other
