--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-less": "~0.7.0",
-    "grunt-contrib-watch": "~0.5.1"
+    "grunt-contrib-watch": "~0.5.1",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
