--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-less": "~0.7.0",
     "grunt-contrib-watch": "~0.5.1",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-exec": "~0.4.2"
   }
 }
