adding reminder of postgres install

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ gunicorn==0.17.4
 pyaml==13.01.0
 python-dateutil==2.1
 ipython==0.13.1
-psycopg2==2.5
+psycopg2==2.5 #sudo apt-get install libpq-dev python-dev
 django-tastypie==0.9.15
 dateutils==0.6.6
 static==0.4
