removing useless field last_edited_time, added add_date for future use

--- a/api/fixtures/TransactionResourceTest.yaml
+++ b/api/fixtures/TransactionResourceTest.yaml
@@ -30,7 +30,7 @@
         category: 1
         user: 1
         date: '2010-01-03'
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 2
@@ -39,7 +39,7 @@
         category: 1
         user: 1
         date: '2010-01-03'
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 3
@@ -48,4 +48,4 @@
         category: 3
         user: 2
         date: '2010-01-03'
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
