--- a/expenses/fixtures/ListTransactionTest.yaml
+++ b/expenses/fixtures/ListTransactionTest.yaml
@@ -46,7 +46,7 @@
         category: 1
         value: 10
         date: 2010-03-03
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.entry
     pk: 2
@@ -55,7 +55,7 @@
         category: 1
         value: 10
         date: 2010-03-03
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 # three entries for user 2
 -   model: expenses.entry
@@ -65,7 +65,7 @@
         category: 2
         value: 20
         date: 2010-03-03
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.entry
     pk: 4
@@ -74,7 +74,7 @@
         category: 2
         value: 20
         date: 2010-03-03
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.entry
     pk: 5
@@ -83,4 +83,4 @@
         category: 2
         value: 20
         date: 2010-03-03
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
