--- a/expenses/fixtures/TransactionUpToDayTest.yaml
+++ b/expenses/fixtures/TransactionUpToDayTest.yaml
@@ -39,7 +39,7 @@
         category: 1
         date: !!timestamp 2010-01-01 00:00:00 -3
         value: -50
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 2
@@ -48,7 +48,7 @@
         category: 1
         date: !!timestamp 2010-01-02 00:00:00 -3
         value: 110
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 3
@@ -57,7 +57,7 @@
         category: 1
         date: !!timestamp 2010-01-03 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 4
@@ -66,7 +66,7 @@
         category: 1
         date: !!timestamp 2010-01-04 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 5
@@ -75,7 +75,7 @@
         category: 1
         date: !!timestamp 2010-01-11 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 6
@@ -84,7 +84,7 @@
         category: 1
         date: !!timestamp 2010-01-15 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 # February
 -   model: expenses.Transaction
@@ -94,7 +94,7 @@
         category: 1
         date: !!timestamp 2010-02-01 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 8
@@ -103,7 +103,7 @@
         category: 1
         date: !!timestamp 2010-02-02 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 9
@@ -112,7 +112,7 @@
         category: 1
         date: !!timestamp 2010-02-03 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 10
@@ -121,7 +121,7 @@
         category: 1
         date: !!timestamp 2010-02-11 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 11
@@ -130,7 +130,7 @@
         category: 1
         date: !!timestamp 2010-02-15 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 # March
 -   model: expenses.Transaction
@@ -140,7 +140,7 @@
         category: 1
         date: !!timestamp 2010-03-01 00:00:00 -3
         value: 110
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 13
@@ -149,7 +149,7 @@
         category: 1
         date: !!timestamp 2010-03-02 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 14
@@ -158,7 +158,7 @@
         category: 1
         date: !!timestamp 2010-03-11 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
 
 -   model: expenses.Transaction
     pk: 15
@@ -167,4 +167,4 @@
         category: 1
         date: !!timestamp 2010-03-15 00:00:00 -3
         value: 100
-        last_edited_time: "00:00:00"
+        add_date: "2010-01-01 00:00:00"
