--- a/expenses/fixtures/BalanceQueryTest.yaml
+++ b/expenses/fixtures/BalanceQueryTest.yaml
@@ -39,7 +39,7 @@
         category: 2
         date: 2010-01-01
         value: -100
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 2
@@ -48,7 +48,7 @@
         category: 1
         date: 2010-01-02
         value: -100
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 3
@@ -57,7 +57,7 @@
         category: 1
         date: 2010-01-03
         value: -100
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 4
@@ -66,7 +66,7 @@
         category: 2
         date: 2010-01-04
         value: 150
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 5
@@ -75,7 +75,7 @@
         category: 1
         date: 2010-01-11
         value: 150
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 6
@@ -84,7 +84,7 @@
         category: 1
         date: 2010-01-15
         value: 150
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 # February
 -   model: expenses.Transaction
@@ -94,7 +94,7 @@
         category: 1
         date: 2010-02-01
         value: -120
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 8
@@ -103,7 +103,7 @@
         category: 1
         date: 2010-02-02
         value: -120
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 9
@@ -112,7 +112,7 @@
         category: 2
         date: 2010-02-03
         value: -120
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 10
@@ -121,7 +121,7 @@
         category: 1
         date: 2010-02-11
         value: 160
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 11
@@ -130,7 +130,7 @@
         category: 2
         date: 2010-02-15
         value: 160
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 12
@@ -139,7 +139,7 @@
         category: 1
         date: 2010-02-01
         value: 160
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 # March
 -   model: expenses.Transaction
@@ -149,7 +149,7 @@
         category: 2
         date: 2010-03-02
         value: -150
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 14
@@ -158,7 +158,7 @@
         category: 1
         date: 2010-03-11
         value: -150
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 15
@@ -167,7 +167,7 @@
         category: 2
         date: 2010-03-15
         value: -150
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 16
@@ -176,7 +176,7 @@
         category: 2
         date: 2010-03-02
         value: 200
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 17
@@ -185,7 +185,7 @@
         category: 1
         date: 2010-03-11
         value: 200
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
 
 -   model: expenses.Transaction
     pk: 18
@@ -194,4 +194,4 @@
         category: 2
         date: 2010-03-15
         value: 200
-        add_date: "2010-01-01 00:00:00"
+        add_date: "2010-01-01 00:00:00-03:00"
