--- a/api/fixtures/ReminderResourceTest.yaml
+++ b/api/fixtures/ReminderResourceTest.yaml
@@ -2,25 +2,40 @@
     pk: 1
     fields:
         name: groceries
-        user: 1
 
 -   model: expenses.Category
     pk: 2
     fields:
         name: STUFF
-        user: 1
 
 -   model: expenses.Category
     pk: 3
     fields:
         name: other
+
+-   model: expenses.CategoryConfig
+    pk: 1
+    fields:
+        category: 1
+        user: 1
+
+-   model: expenses.CategoryConfig
+    pk: 2
+    fields:
+        category: 2
+        user: 1
+
+-   model: expenses.CategoryConfig
+    pk: 3
+    fields:
+        category: 3
         user: 2
 
 -   model: reminder.RepeatableTransaction
     pk: 1
     fields:
         value: 5
-        category: 1
+        category_config: 1
         user: 1
         _due_date: '2010-01-03'
         _day_of_month: 03
@@ -31,7 +46,7 @@
     pk: 2
     fields:
         value: 0
-        category: 1
+        category_config: 1
         user: 1
         _due_date: '2010-01-03'
         _day_of_month: 03
@@ -41,7 +56,7 @@
     pk: 3
     fields:
         value: 0
-        category: 3
+        category_config: 3
         user: 2
         _due_date: '2010-01-03'
         _day_of_month: 03
