--- a/api/fixtures/TransactionResourceTest.yaml
+++ b/api/fixtures/TransactionResourceTest.yaml
@@ -47,7 +47,7 @@
     pk: 1
     fields:
         value: 5
-        category_config: 1
+        category: 1
         user: 1
         date: '2010-01-03'
         created: "2010-01-01 00:00:00-03:00"
@@ -56,7 +56,7 @@
     pk: 2
     fields:
         value: 0
-        category_config: 1
+        category: 1
         user: 1
         date: '2010-01-03'
         created: "2010-01-01 00:00:00-03:00"
@@ -65,7 +65,7 @@
     pk: 3
     fields:
         value: 0
-        category_config: 3
+        category: 3
         user: 2
         date: '2010-01-03'
         created: "2010-01-01 00:00:00-03:00"
