--- a/expenses/fixtures/TransactionUpToDayTest.yaml
+++ b/expenses/fixtures/TransactionUpToDayTest.yaml
@@ -50,7 +50,7 @@
     pk: 1
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-01-01
         value: -50
         created: "2010-01-01 00:00:00-03:00"
@@ -59,7 +59,7 @@
     pk: 2
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-01-02
         value: 110
         created: "2010-01-01 00:00:00-03:00"
@@ -68,7 +68,7 @@
     pk: 3
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-01-03
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -77,7 +77,7 @@
     pk: 4
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-01-04
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -86,7 +86,7 @@
     pk: 5
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-01-11
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -95,7 +95,7 @@
     pk: 6
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-01-15
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -105,7 +105,7 @@
     pk: 7
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-02-01
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -114,7 +114,7 @@
     pk: 8
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-02-02
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -123,7 +123,7 @@
     pk: 9
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-02-03
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -132,7 +132,7 @@
     pk: 10
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-02-11
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -141,7 +141,7 @@
     pk: 11
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-02-15
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -151,7 +151,7 @@
     pk: 12
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-03-01
         value: 110
         created: "2010-01-01 00:00:00-03:00"
@@ -160,7 +160,7 @@
     pk: 13
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-03-02
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -169,7 +169,7 @@
     pk: 14
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-03-11
         value: 100
         created: "2010-01-01 00:00:00-03:00"
@@ -178,7 +178,7 @@
     pk: 15
     fields:
         user: 1
-        category_config: 1
+        category: 1
         date: 2010-03-15
         value: 100
         created: "2010-01-01 00:00:00-03:00"
