--- a/reminder/fixtures/RepeatableTransactionTest.yaml
+++ b/reminder/fixtures/RepeatableTransactionTest.yaml
@@ -10,6 +10,16 @@
         date_joined: "2010-02-02 00:00:00-03:00"
 
 
+##################
+# CATEGORY GROUP #
+##################
+
+-   model: expenses.categorygroup
+    pk: 1
+    fields:
+        name: group
+
+
 ############
 # CATEGORY #
 ############
@@ -18,6 +28,7 @@
     pk: 1
     fields:
         name: Groceries
+        group: ['group']
 
 
 ###################
