--- a/api/fixtures/TransactionResourceTest.yaml
+++ b/api/fixtures/TransactionResourceTest.yaml
@@ -1,22 +1,32 @@
+-   model: expenses.CategoryGroup
+    pk: 1
+    fields:
+        name: group
+
+
 -   model: expenses.Category
     pk: 1
     fields:
         name: groceries
+        group: ['group']
 
 -   model: expenses.Category
     pk: 2
     fields:
         name: STUFF
+        group: ['group']
 
 -   model: expenses.Category
     pk: 4
     fields:
         name: Inactive
+        group: ['group']
 
 -   model: expenses.Category
     pk: 3
     fields:
         name: other
+        group: ['group']
 
 -   model: expenses.CategoryConfig
     pk: 1
