is_negative field on category

--- a/api/fixtures/CategoryResourceTest.yaml
+++ b/api/fixtures/CategoryResourceTest.yaml
@@ -8,6 +8,7 @@
     fields:
         name: Groceries
         group: ['group']
+        is_negative: false
     pk: 1
 
 -   model: expenses.Category
